<resources>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="actfm_picture_clear">Clear Picture</string>
  <string name="TVA_add_comment">Add a comment…</string>
  <string name="display_name">Display name</string>
  <string name="backup_BPr_header">Backups</string>
  <string name="backup_BAc_export">Backup now</string>
  <string name="encrypt_backup">Encrypt backup</string>
  <string name="encrypt_backups_title">Encrypt backups</string>
  <string name="encrypt_backups_summary">Local and to Google Drive</string>
  <string name="encrypted_backup">Encrypted backup</string>
  <string name="toggle_password_visibility">Toggle password visibility</string>
  <string name="backup_BAc_import">Import backup</string>
  <string name="export_toast">Backed up %1$s to %2$s.</string>
  <string name="import_summary_title">Restore summary</string>
  <string name="import_summary_message">
File %1$s contained %2$s.\n\n
%3$s imported,\n
%4$s already exist\n
%5$s had errors\n
  </string>
  <string name="import_progress_read">Reading task %d…</string>
  <string name="import_failed">Import failed</string>
  <string name="import_failed_message">Could not read backup file</string>
  <string name="read_permission_label">Tasks Permission</string>
  <string name="discard_confirmation">Are you sure you want to discard your changes?</string>
  <string name="keep_editing">Keep editing</string>
  <string name="DLG_delete_this_task_question">Delete this task?</string>
  <string name="DLG_hour_minutes">Time (hours : minutes)</string>
  <string name="DLG_undo">Undo</string>
  <string name="WID_dateButtonUnset">Click to set</string>
  <string name="TLA_no_items">There are no tasks here.</string>
  <string name="TLA_menu_sort">Sort</string>
  <string name="TLA_menu_search">Search</string>
  <string name="TLA_menu_settings">Settings</string>
  <string name="app_settings">App settings</string>
  <string name="TAd_actionEditTask">Edit</string>
  <string name="customize_drawer">Customize drawer</string>
  <string name="customize_drawer_summary">Drag and drop to rearrange menu items</string>
  <string name="action_call">Call</string>
  <string name="action_open">Open</string>
  <string name="SSD_sort_my_order">My order</string>
  <string name="astrid_sort_order">Astrid manual sorting</string>
  <string name="astrid_sort_order_summary">Enable Astrid\'s manual sort mode for \'My Tasks\', \'Today\', and tags. This sort mode will be replaced by \'My order\' in a future update</string>
  <string name="SSD_sort_auto">Smart sort</string>
  <string name="SSD_sort_alpha">By title</string>
  <string name="SSD_sort_start">By start date</string>
  <string name="SSD_sort_due">By due date</string>
  <string name="SSD_sort_importance">By priority</string>
  <string name="SSD_sort_modified">By last modified</string>
  <string name="sort_created">By creation time</string>
  <string name="sort_list">By list</string>
  <string name="sort_completed">By completion time</string>
  <string name="FLA_search_filter">Matching \'%s\'</string>
  <string name="FLA_new_filter">Create new filter</string>
  <string name="TEA_title_hint">Task name</string>
  <string name="TEA_importance_label">Priority</string>
  <string name="TEA_add_subtask">Add subtask</string>
  <string name="TEA_note_label">Description</string>
  <string name="TEA_estimatedDuration_label">How long will it take?</string>
  <string name="TEA_elapsedDuration_label">Time already spent</string>
  <string name="save">Save</string>
  <string name="TEA_timer_est">Est. %s</string>
  <string name="TEA_timer_elap">Elapsed %s</string>
  <string name="due_date">Due date</string>
  <string name="due_time">Due time</string>
  <string name="start_date">Start date</string>
  <string name="day_before_due">Day before due</string>
  <string name="week_before_due">Week before due</string>
  <string name="TEA_control_repeat">Repeat</string>
  <string name="TEA_control_gcal">Calendar</string>
  <string name="TEA_control_importance">Priority</string>
  <string name="TEA_control_location">Location</string>
  <string name="TEA_control_notes">Description</string>
  <string name="TEA_control_files">Files</string>
  <string name="TEA_control_reminders">Reminders</string>
  <string name="TEA_control_timer">Timer Controls</string>
  <string name="TEA_control_hidden_section">----Hide Always----</string>
  <string name="TEA_creation_date">Creation date</string>
  <string name="none">None</string>
  <string name="EPr_edit_screen_options">Edit screen options</string>
  <string name="EPr_beastMode_reset">Reset to defaults</string>
  <string name="EPr_fullTask_title">Show full task title</string>
  <string name="EPr_show_task_edit_comments">Show comments in task edit</string>
  <string name="task_list_options">Task list options</string>
  <string name="EPr_cal_end_or_start_at_due_time">Calendar event time</string>
  <string name="EPr_cal_end_at_due_time">End calendar events at due time</string>
  <string name="EPr_cal_start_at_due_time">Start calendar events at due time</string>
  <string name="always_display_full_date">Show full date</string>
  <string name="EPr_reset_preferences">Reset preferences</string>
  <string name="EPr_reset_preferences_warning">Preferences will be reset to default values</string>
  <string name="EPr_delete_task_data">Delete task data</string>
  <string name="EPr_delete_task_data_warning">All tasks will be permanently deleted</string>
  <string name="EPr_manage_delete_completed_gcal">Delete calendar events for completed tasks</string>
  <string name="EPr_manage_delete_completed_gcal_message">Do you really want to delete all your events for completed tasks?</string>
  <string name="EPr_manage_delete_gcal_status">Deleted %d calendar events!</string>
  <string name="EPr_manage_delete_all_gcal">Delete all calendar events for tasks</string>
  <string name="EPr_manage_delete_all_gcal_message">Do you really want to delete all your events for tasks?</string>
  <string name="task_defaults">Task defaults</string>
  <string name="EPr_default_importance_title">Default priority</string>
  <string name="default_start_date">Default start date</string>
  <string name="default_due_date">Default due date</string>
  <string name="EPr_default_reminders_title">Default reminders</string>
  <string name="EPr_default_location_reminder_title">Default location reminders</string>
  <string name="EPr_default_reminders_mode_title">Default ring/vibrate type</string>
  <string name="default_location">Default location</string>
  <string name="priority_high">High</string>
  <string name="priority_medium">Medium</string>
  <string name="priority_low">Low</string>
  <string name="day_after_tomorrow">Day after tomorrow</string>
  <string name="next_week">Next week</string>
  <string name="no_reminders">No reminders</string>
  <string name="default_location_reminder_on_arrival">On arrival</string>
  <string name="default_location_reminder_on_departure">On departure</string>
  <string name="default_location_reminder_on_arrival_or_departure">On arrival and departure</string>
  <string name="BFE_Active">My Tasks</string>
  <string name="BFE_Recent">Recently modified</string>
  <string name="CFA_button_add">Add Criteria</string>
  <string name="CFC_dueBefore_text">Due By: ?</string>
  <string name="CFC_dueBefore_name">Due By…</string>
  <string name="CFC_startBefore_text">Start by: ?</string>
  <string name="CFC_startBefore_name">Start by…</string>
  <string name="no_due_date">No due date</string>
  <string name="no_start_date">No start date</string>
  <string name="filter_any_start_date">Any start date</string>
  <string name="next_month">Next Month</string>
  <string name="CFC_importance_text">Priority at least ?</string>
  <string name="CFC_importance_name">Priority…</string>
  <string name="CFC_tag_text">Tag: ?</string>
  <string name="CFC_tag_name">Tag…</string>
  <string name="CFC_tag_contains_name">Tag name contains…</string>
  <string name="CFC_tag_contains_text">Tag name contains: ?</string>
  <string name="CFC_title_contains_name">Title contains…</string>
  <string name="CFC_title_contains_text">Title contains: ?</string>
  <string name="gcal_TEA_error">Error adding task to calendar!</string>
  <string name="gtasks_GTA_clear_completed">Clear Completed</string>
  <string name="EPr_voiceInputEnabled_title">Voice input</string>
  <string name="widget_show_checkboxes">Show checkboxes</string>
  <string name="widget_show_header">Show header</string>
  <string name="widget_show_settings">Show settings</string>
  <string name="notifications">Notifications</string>
  <string name="backup_directory">Backup folder</string>
  <string name="google_drive_backup">Google Drive backup</string>
  <string name="enabled">Enabled</string>
  <string name="font_size">Font size</string>
  <string name="source_code">Source code</string>
  <string name="contact_developer">Contact developer</string>
  <string name="rate_tasks">Rate Tasks</string>
  <string name="tags">Tags</string>
  <string name="change_priority">Change priority</string>
  <string name="delete">Delete</string>
  <string name="copy">Copy</string>
  <string name="move">Move</string>
  <string name="show_unstarted">Show unstarted</string>
  <string name="show_completed">Show completed</string>
  <string name="privacy_policy">Privacy policy</string>
  <string name="send_anonymous_statistics">Improve Tasks</string>
  <string name="send_anonymous_statistics_summary">Send anonymous usage statistics and crash reports to help improve Tasks. No personal data will be collected.</string>
  <string name="filter">Filter</string>
  <string name="opacity">Opacity</string>
  <string name="theme">Theme</string>
  <string name="color">Color</string>
  <string name="about">About</string>
  <string name="license_summary">Tasks is libre open-source software, licensed under the GNU General Public License v3.0</string>
  <string name="logout">Log out</string>
  <string name="reinitialize_account">Reinitialize</string>
  <string name="background_location_permission_required">Tasks collects location data to enable location-based reminders, even when the app is closed or not in use.</string>
  <string name="third_party_licenses">Third-party licenses</string>
  <string name="whats_new">What\'s New</string>
  <string name="expand_subtasks">Expand subtasks</string>
  <string name="collapse_subtasks">Collapse subtasks</string>
  <string name="preferences_look_and_feel">Look and feel</string>
  <string name="preferences_advanced">Advanced</string>
  <string name="documentation">Documentation</string>
  <string name="select_all">Select all</string>
  <string name="share">Share</string>
  <string name="custom_filter_and">AND</string>
  <string name="custom_filter_or">OR</string>
  <string name="custom_filter_not">NOT</string>
  <string name="local_lists">Local lists</string>
  <string name="android_auto_backup">Android Backup Service</string>
  <string name="android_auto_backup_device_summary">You must also opt in to backup service through your device settings. Not all devices provide backup service.</string>
  <string name="device_settings">Device settings</string>
  <string name="foreground_location">Foreground location</string>
  <string name="background_location">Background location</string>
  <string name="multi_select_reschedule">Reschedule</string>
  <string name="follow_reddit">Join r/tasks</string>
  <string name="sign_in_with_google">Sign in with Google</string>
  <string name="authentication_required">Authentication required</string>
  <string name="migrate">Migrate</string>
  <string name="app_passwords">App passwords</string>
  <string name="app_passwords_more_info">Synchronize your tasks and calendars with third-party desktop and mobile apps. Tap here for more info</string>
  <string name="generate_new_password">Generate new password</string>
  <string name="app_password_enter_description">Give your password a name (optional)</string>
</resources>