<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:key="@string/preference_screen">

  <org.tasks.preferences.IconPreference
    android:key="@string/sign_in_with_google"
    android:layout="@layout/preference_icon"
    android:title="@string/sign_in_with_google"
    android:summary="@string/authentication_required"
    app:isPreferenceVisible="false"
    tools:isPreferenceVisible="true"/>

  <PreferenceCategory
    android:key="@string/migrate"
    android:title="@string/migrate"
    app:isPreferenceVisible="false">

    <Preference
      android:key="@string/local_lists"
      android:title="@string/local_lists"/>

  </PreferenceCategory>

  <PreferenceCategory
    android:key="@string/app_passwords"
    android:title="@string/app_passwords">
  </PreferenceCategory>

  <Preference
    android:icon="@drawable/ic_open_in_new_24px"
    android:key="@string/app_passwords_more_info"
    android:summary="@string/app_passwords_more_info" />

  <EditTextPreference
    android:icon="@drawable/ic_outline_add_24px"
    android:key="@string/generate_new_password"
    android:title="@string/generate_new_password"
    android:dialogTitle="@string/app_password_enter_description" />

  <Preference
    android:key="@string/logout"
    android:title="@string/logout"
    app:allowDividerAbove="true"/>

</PreferenceScreen>