<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/edit_tags"
    android:icon="@drawable/ic_outline_label_24px"
    android:title="@string/tags"
    app:showAsAction="always" />

  <item
    android:id="@+id/move_tasks"
    android:icon="@drawable/ic_list_24px"
    android:title="@string/move"
    app:showAsAction="always" />

  <item
    android:id="@+id/reschedule"
    android:icon="@drawable/ic_outline_schedule_24px"
    android:title="@string/multi_select_reschedule"
    app:showAsAction="always" />

  <item
    android:id="@+id/edit_priority"
    android:icon="@drawable/ic_outline_flag_24px"
    android:title="@string/change_priority"
    app:showAsAction="always" />

  <item
    android:id="@+id/menu_select_all"
    android:icon="@drawable/ic_select_all_24px"
    android:title="@string/select_all"
    app:showAsAction="ifRoom" />

  <item
    android:id="@+id/menu_share"
    android:icon="@drawable/ic_outline_send_24px"
    android:title="@string/share"
    app:showAsAction="ifRoom" />

  <item
    android:id="@+id/copy_tasks"
    android:icon="@drawable/ic_outline_file_copy_24px"
    android:title="@string/copy"
    app:showAsAction="ifRoom"/>

  <item
    android:id="@+id/delete"
    android:icon="@drawable/ic_outline_delete_24px"
    android:title="@string/delete"
    app:showAsAction="ifRoom"/>

</menu>
