<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/menu_voice_add"
    android:icon="@drawable/ic_outline_mic_none_24px"
    android:title="@string/EPr_voiceInputEnabled_title"
    app:showAsAction="always"/>
  <item
    android:id="@+id/menu_search"
    android:icon="@drawable/ic_outline_search_24px"
    android:title="@string/TLA_menu_search"
    app:actionViewClass="androidx.appcompat.widget.SearchView"
    app:showAsAction="always|collapseActionView"/>
  <item
    android:id="@+id/menu_sort"
    android:icon="@drawable/ic_outline_sort_24px"
    android:title="@string/TLA_menu_sort"
    app:showAsAction="ifRoom"/>
  <group
    android:checkableBehavior="all">
    <item
      android:id="@+id/menu_show_hidden"
      android:checkable="true"
      android:title="@string/show_hidden"/>
    <item
      android:id="@+id/menu_show_completed"
      android:checkable="true"
      android:title="@string/show_completed"/>
  </group>
  <item
    android:id="@+id/menu_clear_completed"
    android:title="@string/gtasks_GTA_clear_completed"
    app:showAsAction="never"/>
</menu>