<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButtonToggleGroup
      android:id="@+id/button_toggle"
      android:layout_gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/keyline_first"
      android:orientation="horizontal"
      app:selectionRequired="true"
      app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
          android:id="@+id/button_and"
          style="@style/OutlineButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/custom_filter_and" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/button_or"
          style="@style/OutlineButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/custom_filter_or" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/button_not"
          style="@style/OutlineButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/custom_filter_not" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>