<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/filter_selection"
            style="@style/WidgetConfigRow">

            <TextView
                android:id="@+id/selected_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="?attr/asTextColor"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/selected_filter"
                android:layout_toStartOf="@id/selected_filter"
                android:text="@string/filter"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="?attr/asTextColor"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/theme_selection"
            style="@style/WidgetConfigRow">

            <TextView
                android:id="@+id/selected_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="?attr/asTextColor"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/selected_theme"
                android:layout_toStartOf="@id/selected_theme"
                android:text="@string/theme"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="?attr/asTextColor"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/theme_color"
            style="@style/WidgetConfigRow">

            <TextView
                android:id="@+id/selected_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="?attr/asTextColor"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/selected_color"
                android:layout_toStartOf="@id/selected_color"
                android:text="@string/color"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="?attr/asTextColor"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/widget_opacity"
            style="@style/WidgetConfigRow">

            <TextView
                android:id="@+id/opacity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="?attr/asTextColor"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/opacity_value"
                android:layout_toStartOf="@id/opacity_value"
                android:text="@string/opacity"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="?attr/asTextColor"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/font_size"
            style="@style/WidgetConfigRow">

            <TextView
                android:id="@+id/font_size_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="?attr/asTextColor"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/font_size_value"
                android:layout_toStartOf="@id/font_size_value"
                android:text="@string/font_size"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="?attr/asTextColor"
                android:textSize="18sp" />

        </RelativeLayout>

        <CheckBox
            android:id="@+id/showDueDate"
            style="@style/WidgetConfigRow.CheckBox"
            android:checked="true"
            android:text="@string/widget_show_due_date" />

        <CheckBox
            android:id="@+id/showCheckBoxes"
            style="@style/WidgetConfigRow.CheckBox"
            android:checked="true"
            android:text="@string/widget_show_checkboxes" />

        <CheckBox
            android:id="@+id/showHeader"
            style="@style/WidgetConfigRow.CheckBox"
            android:checked="true"
            android:text="@string/widget_show_header" />

        <CheckBox
            android:id="@+id/showSettings"
            style="@style/WidgetConfigRow.CheckBox"
            android:checked="true"
            android:text="@string/widget_show_settings" />

    </LinearLayout>

</ScrollView>
